# VEK

./: README.md
Docs/: Prefixes.md  Preprocessors.md
Samples/: build.sh  toolchain-mingw64.cmake
Samples/Sandbox/: CMakeLists.txt
Samples/Sandbox/src/: main.cpp
VEK/: CMakeLists.txt
VEK/Include/VEK/: VEK.hpp
VEK/Include/VEK/Core/: VCO_Console.hpp
VEK/Include/VEK/Core/Container/: VCO_String.hpp  VCO_Vector.hpp
VEK/Include/VEK/Core/Log/: VCO_Log.hpp
VEK/Include/VEK/Core/Utility/: VCO_PathUtils.hpp
VEK/Include/VEK/Math/: VMA_Common.hpp
VEK/Include/VEK/Math/Linear/: VMA_Matrix.hpp  VMA_Quaternion.hpp  VMA_Vector.hpp
VEK/Include/VEK/Platform/: VPL_Context.hpp  VPL_Input.hpp  VPL_Platform.hpp  VPL_Time.hpp
VEK/Include/VEK/Platform/Impl/Linux/: VPL_LinuxContext.hpp  VPL_LinuxInput.hpp  VPL_LinuxOS.hpp
VEK/Include/VEK/Platform/Impl/Windows/: VPL_WindowsContext.hpp  VPL_WindowsInput.hpp  VPL_WindowsOS.hpp
VEK/Source/VEK/Core/: VCO_Console.cpp
VEK/Source/VEK/Core/Log/: VCO_Log.cpp
VEK/Source/VEK/Core/Utility/: VCO_PathUtils.cpp
VEK/Source/VEK/Platform/: VPL_Platform.cpp
VEK/Source/VEK/Platform/Impl/Linux/: VPL_LinuxContext.cpp  VPL_LinuxInput.cpp  VPL_LinuxOS.cpp
VEK/Source/VEK/Platform/Impl/Windows/: VPL_WindowsContext.cpp  VPL_WindowsInput.cpp  VPL_WindowsOS.cpp
